# MixedStream

./: .gitignore  AGENTS.md  CLAUDE.md  Core.md  README.md  UPDDATES.md  build.gradle  build.gradle.kts  config.gradle  logs_startup.txt  settings.gradle  settings.gradle.kts
.claude/: settings.local.json
.github/workflows/: ci.yml  release-apk.yml
app/: AGENTS.md  build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/astra/streamer/: AstraStreamerApplication.kt
app/src/main/java/com/astra/streamer/app/: LiveActivity.kt  ScreenOverlayManager.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_live.xml
app/src/main/res/values/: strings.xml  themes.xml
astra/: AGENTS.md  build.gradle.kts
astra/src/main/cpp/: CMakeLists.txt
astra/src/main/cpp/callback/: JavaCallback.cpp  JavaCallback.h
astra/src/main/cpp/capture/: CaptureTypes.h  NativeAudioCapturer.cpp  NativeAudioCapturer.h  NativeCameraEngine.cpp  NativeCameraEngine.h
astra/src/main/cpp/codec/: AudioEncoderNative.cpp  AudioEncoderNative.h  NativeStreamEngine.cpp  NativeStreamEngine.h  VideoEncoderNative.cpp  VideoEncoderNative.h
astra/src/main/cpp/common/: IPush.h  IThread.cpp  IThread.h  NativeLogger.cpp  PushProxy.cpp  PushProxy.h
astra/src/main/cpp/jni/: logger_bridge.cpp  native_capture_bridge.cpp  native_rtmp_push.cpp  native_session_bridge.cpp  native_stream_engine.cpp  render_bridge.cpp  render_util_bridge.cpp  shader_bridge.cpp  stats_bridge.cpp
astra/src/main/cpp/push/: AVQueue.h  RTMPPush.cpp
astra/src/main/cpp/render/: CameraRendererNative.cpp  CameraRendererNative.h  EncodeRendererNative.cpp  EncodeRendererNative.h  ShaderLibrary.h
astra/src/main/cpp/stream/: FlvMuxer.h
astra/src/main/res/layout/: include_live.xml
docs/: COLOR_SCHEME.md  WEBRTC_INTEGRATION.md  architecture_reorg.md  av_dataflow.puml  classes.puml  preview.puml  rtmp.puml  screen_streaming.puml  streaming_pipeline.puml  video.puml  video_capture.puml  video_encode.puml  video_render.puml  video_streaming.puml
docs/unified-streaming-api/: API_REFERENCE.md  ARCHITECTURE.md  DESIGN.md  EXAMPLES.md  IMPLEMENTATION_PLAN.md  MIGRATION_GUIDE.md  README.md
gradle/wrapper/: gradle-wrapper.properties
tools/: diagnose_camera.sh  render_docs.sh
(+175 files in other folders)
